--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,7 @@
+@import url(//fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,700,700italic);
+
 body {
+	font-family:Avenir , "Open Sans" , "Helvetica Neue" , Helvetica , Arial , Verdana , Roboto , "游ゴシック" , "Yu Gothic" , "游ゴシック体" , "YuGothic" , "ヒラギノ角ゴ Pro W3" , "Hiragino Kaku Gothic Pro" , "Meiryo UI" , "メイリオ" , Meiryo , "ＭＳ Ｐゴシック" , "MS PGothic" , sans-serif;
 	width: 100%;
 	background: #0af;
 	color: #fefefe;
@@ -94,6 +97,8 @@ box-shadow:-22px -20px 15px -7px #c2c2c2 inset,1px -1px 34px -11px #6e6e6e inset
 	border: 2px dashed #eee;
 	text-align: center;
 }
+
+
 
 .vertical_middle {
 	position: relative;
