半年ぶり更新

--- a/css/main.css
+++ b/css/main.css
@@ -145,4 +145,4 @@ box-shadow:-22px -20px 15px -7px #c2c2c2 inset,1px -1px 34px -11px #6e6e6e inset
 
 .cropper-view-box, .cropper-face {
 	border-radius: 50%;
-}
+}@CHARSET "UTF-8";
